@@ -9,6 +9,12 @@
 
  * Fixed several issues in 'full' compression.
    [fschulze]
+   
+ * Extended the GenericSetup import step to support positioning of resources:
+   the 'position-before' and 'position-after' attributes cause the resource
+   to be positioned before or after resource named in the attribute. 
+   'position-top' and 'position-bottom' move a resource to the top or bottom.
+   [mj]
 
 1.3.4
 =====
